Added URIResource.