@@ -20,6 +20,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.regex.Matcher;
@@ -32,32 +33,32 @@ import java.util.regex.Pattern;
  * @author René M. de Bloois
  */
 // TODO Maybe we should use URIResource. That one has no problems with the classpath scheme.
-public class URLResource extends Resource
+public class URIResource extends Resource
 {
 	/**
 	 * The URL.
 	 */
-	protected URL url;
+	protected URI uri;
 
 	/**
 	 * Constructor.
 	 *
 	 * @param url The URL.
 	 */
-	public URLResource( URL url )
+	public URIResource( URI url )
 	{
-		this.url = url;
+		this.uri = url;
 	}
 
 	/**
 	 * Constructor.
 	 *
 	 * @param url The URL.
-	 * @throws MalformedURLException If the string specifies an unknown protocol.
+	 * @throws URISyntaxException
 	 */
-	public URLResource( String url ) throws MalformedURLException
+	public URIResource( String url ) throws URISyntaxException
 	{
-		this( new URL( url ) );
+		this( new URI( url ) );
 	}
 
 	@Override
@@ -69,7 +70,14 @@ public class URLResource extends Resource
 	@Override
 	public URL getURL()
 	{
-		return this.url;
+		try
+		{
+			return this.uri.toURL();
+		}
+		catch( MalformedURLException e )
+		{
+			throw new FatalIOException( e );
+		}
 	}
 
 	@Override
@@ -77,7 +85,7 @@ public class URLResource extends Resource
 	{
 		try
 		{
-			return this.url.openStream();
+			return this.uri.toURL().openStream();
 		}
 		catch( IOException e )
 		{
@@ -88,17 +96,9 @@ public class URLResource extends Resource
 	@Override
 	public Resource createRelative( String path )
 	{
-		try
-		{
-			// TODO Unit test with folder url
-			// TODO The resource factory has more logic then this
-			URL parent = this.url;
-			return new URLResource( new URL( parent, path ) );
-		}
-		catch( MalformedURLException e )
-		{
-			throw new FatalIOException( e );
-		}
+		// TODO Unit test with folder url
+		// TODO The resource factory has more logic then this
+		return new URIResource( this.uri.resolve( path ) );
 	}
 
 	static String getScheme( String path )
@@ -114,7 +114,7 @@ public class URLResource extends Resource
 	@Override
 	public String toString()
 	{
-		return this.url.toString();
+		return this.uri.toString();
 	}
 
 	@Override
@@ -134,7 +134,7 @@ public class URLResource extends Resource
 	@Override
 	public String getNormalized()
 	{
-		return this.url.toExternalForm();
+		return this.uri.normalize().toString();
 	}
 
 	@Override
